--- a/client/src/styles/Home/HeroSection.module.css
+++ b/client/src/styles/Home/HeroSection.module.css
@@ -10,7 +10,7 @@
   background-color: var(--primary-color);
   color: #fff;
   text-align: center;
-  padding: 100px 0;
+  padding:  50px 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -35,7 +35,8 @@
 /* Styling for the sub-headline */
 .hero-description {
   font-size: 1.8rem;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  padding-bottom: 10px;
   font-style: italic;
   color: #fff;
 }
@@ -45,6 +46,7 @@
   background-color: #fff;
   color: var(--primary-color);
   font-size: 1.4rem;
+  font-weight: bold;
   padding: 12px 24px;
   border: none;
   border-radius: 8px;
@@ -55,6 +57,7 @@
 
 /* Change button color on hover */
 .cta-button:hover {
+  
   background-color: var(--secondary-color);
   color: #fff;
 }
@@ -65,7 +68,8 @@
   height: auto;
   display: block;
   margin: 0px 50px;
-  max-height: 400px;
+ 
+  max-height: 500px;
   object-fit: cover;
 }
 
