--- a/client/src/styles/NavBar.module.css
+++ b/client/src/styles/NavBar.module.css
@@ -44,11 +44,18 @@
   transition: color 0.3s;
   cursor: pointer;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 20px;
+  margin: 5px 5px 5px 5px;
 }
 
 .links a:hover {
-  color: #0074d9;
+  color: #fff;
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* Styling for the mobile icon */
